wisski_editlayout/css/std/edit-form.css
/* tweaks for the link dialog/linkit widget for non-Seven themes */
div.editor-link-dialog.ui-dialog--narrow {
  /* make dialog as wide as it needs */
  max-width: 95%;
}
div.editor-link-dialog.ui-dialog--narrow #drupal-modal.ui-dialog-content {
  /* this allows the linkit dropdown to flow out of the bounding dialog content */
  position: static;
}



/* simple singel value input */

/* do some overwriting because drupal is stupid. */
body {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
}

table {
  font-family: inherit !important;
  
  font-size: 0.929em !important;
  position: relative;
  display: table-cell;
}

form .form-item label::after {
  content: ":";
}

form .form-item input {
  margin-left: 38px;
}


/* simple multi value fields */ 

form .field-multiple-table {
/*  float: left;*/
  width: inherit;
}

form .form-item .tabledrag-toggle-weight-wrapper {
  /* hide the toggle weights functionality */
  display: none;
}


table.field-multiple-table > div {
  float: right;
}

form .form-item table thead tr {
  border: 0;
  background: none;
}

form .form-item table thead tr th {
  border: 0;
  background: none;
  color: inherit;
//  background: white;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 0;
}

form .form-item table thead tr th.field-label {
  text-transform: none;
}

form .form-item table thead tr th.field-label::after {
  content: ":";
}

form .form-item table tbody tr {
  border: 0;
}

form .form-item table tbody td {
  padding: 2px;
}

form .form-item table tbody td input {
  margin-left: 0;
}

form .form-item .field-add-more-submit.button,
form .form-item .field-add-more-submit.button:hover,
form .form-item .field-add-more-submit.button:focus {

  background-image: url('../../images/icons/plus.png');
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 60%;

  text-indent: 100px;
  font-size: 0 !important;
/*
  white-space: nowrap;
  width: 36px;
*/
  margin: 0 0 0 15px;

  
  width:25px;
  height:25px;
  line-height:25px;
/*  border: 2px solid #f5f5f5; */
  border-radius: 50%;
  color:#f5f5f5;
  text-align:center;
  text-decoration:none;
/*  background: #464646; */
  box-shadow: 0 0 3px gray;
  font-size:20px;
  font-weight:bold;
/*  margin: 0;*/
}

form .form-item .clearfix {
    position: relative;
    top: 23px;
    /* right: 10px; */
    /* float: right; */
    display: table-cell;
 /* padding-left: 10px;*/
}

.form-item, .form-actions {
/*    margin-top: 1em; */
    position: relative;
/*    margin-bottom: 1em;*/
    width: auto;
    display: table-row-group;
}

.form-composite > legend, .label {
  font-weight: initial;
}

